# agent-orchestrator

./: .env.example  .gitignore  README.md  docs.json  mint.json  pyproject.toml
config/: agents.yaml
docs/: architecture.mdx  introduction.mdx  openrouter-video-api-spec.md  quickstart.mdx
docs/concepts/: agents.mdx  pipelines.mdx  task-context.mdx
docs/superpowers/plans/: 2026-04-05-video-generation.md  SESSION-STATE.md
docs/superpowers/specs/: 2026-04-05-video-generation-design.md
src/: agent_registry.py  main.py  mcp_server.py  models.py  openrouter_client.py  routes.py  settings.py  video_client.py
static/: index.html
